--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "real-time-pizza",
   "version": "1.0.0",
-  "description": "Run Time Pizza App",
+  "description": "Dairy Delivery Website",
   "main": "index.js",
   "author": "Nilkantha",
   "scripts": {
     "serve": "node server.js ",
-    "dev": "nodemon server.js",
+    "nilu": "nodemon server.js",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
